[package]
name = "examplelib"
version = "0.1.0"
authors = ["Dave Hylands <davehylands@fullstory.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

#[lib]
#name = "examplelib"
#path = "src/lib.rs"
#crate-type = ["staticlib"]
